# consolgames-tools

./: Corruption.pri  LICENSE  Patcher.pri  README.md  make_patcher_vs_projects.bat  make_vs_projects.bat
Common/: ValueHolder.h
ExtractorLib/: pak.h
FontEditor/: AtlasBuilder.pas  GbaUnit.pas  Kerning.dfm  MetroidFontEditor.dpr
FontLib/: FontLib.pro  MetroidFont.h  SimpleImage.h  TextureAtlas.h
FontTool/: FontTool.pro
Paster/: MainFrame.h
PasterLib/: DataPaster.cpp  MainDolPatcher.cpp  MainDolPatcher.h  PasterLib.pro  QtFileStream.h  QtPakArchive.cpp
Patcher/: ActionListWidget.cpp  CompoundProgressHandler.cpp  FreeSpaceChecker.cpp  FreeSpaceChecker.h  Page.h  Patcher.pro  PatcherController.cpp  PatcherWorker.cpp  PathChecker.h  StaffWidget.cpp  TransparentLabel.h  UsbDriveListener.cpp  main.cpp  patchdata.qrc  pch.h  qt_ru.ts
Patcher_deprecated/: MetroidPatcher.h  Patcher.qrc
ScriptTester/: ScriptTester.cpp  ScriptTester.h  ScriptTester.pro
ScriptTesterLib/: ScriptParser.h  ScriptTesterLib.pro
ScriptViewer/: MessageFileListModel.cpp  MessageFileListModel.h  MessageSetModel.h  ProjectReader.cpp  ProjectReader.h  main.cpp  (+7 more)
core/: CMakeLists.txt  core.h  core.pro
core/classes/: Nullable.h  PathInfo.h
core/streams/: FileStream.cpp  FileStream.h  ImageFileStream.cpp  ImageFileStream.h  ImageStream.h  MemoryStream.cpp  MemoryStream.h  PartStream.h  Stream.cpp  Stream.h
core/streams/iso/: IsoDirectory.cpp  IsoDirectory.h  IsoFS.h  IsoFSCDVD.h  IsoFile.cpp  IsoFile.h  IsoFileDescriptor.cpp  IsoFileDescriptor.h  IsoImage.cpp  IsoImage.h  SectorSource.h
(+1638 files in other folders)
